# ufc_compressor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  clean.bat  compile_run.bat  conanfile.txt  git_add_commit.bat  install_dependencies.bat  run.bat
scripts/: build.bat  compile_run.bat  git_add_submodule.bat  install_dependencies.bat  reload_path.ps1  run.bat
src/: CompressionEstimator.cpp  CompressionEstimator.hpp  TEMP.CPP.bak  main.cpp
src/utils/: CompressionEstimator.cpp  CompressionEstimator.hpp
tests/: example.txt
